admin and result pages apdating

--- a/static/admin.html
+++ b/static/admin.html
@@ -31,18 +31,36 @@
           <div class="row">
             <div class="col-md-12 ">
               <div class="row">
-                <div class="col-sm-8">
-                  <p class="text-light">After taking some pictures for voters now can create a modal ready for voting</p>
+                <div class="col-sm-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <a  type="button" class="btn btn-warning w-100" id="train">TRAIN MODAL</a>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <a href="resultpage.html" class="btn btn-warning w-100" >RESULT</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <a  href="../static/" class="btn btn-warning w-100" >VOTE</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-3">
                 <div class="card">
                 <div class="card-body">
-                  <button type="button" class="btn btn-warning w-100" id="train">TRAIN MODAL</button>
+                  <a href="../static/" class="btn btn-warning w-100">LOGOUT</a>
                 </div>
               </div>
                 </div>
               </div>
-            
+               <br>
               <div class="card p-2">
                 <!-- <div class="input-group mb-3 mt-3">
                     <input type="number" class="form-control" id="input_Id" placeholder="Enter finger id (1-127)">
