--- a/static/admin.html
+++ b/static/admin.html
@@ -48,7 +48,7 @@
                 <div class="col-sm-3">
                   <div class="card">
                     <div class="card-body">
-                      <a  href="../static/" class="btn btn-warning w-100" >VOTE</a>
+                      <a  href="register.html" class="btn btn-warning w-100" >REGISTER VOTERS</a>
                     </div>
                   </div>
                 </div>
