added some files

--- a/static/index.html
+++ b/static/index.html
@@ -84,8 +84,8 @@
                     <h4 class="p-3">Finger Print Verification</h4>
                     <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
 
-                    <div class=" p-3 mb-2  text-light text-center w-100">
-                      <h3 id="finger-print-status  bg-danger h-100">
+                    <div class=" p-3 mb-2  bg-danger text-light text-center w-100 h-300">
+                      <h3 id="finger-print-status">
                         <div class="spinner-grow spinner-grow-sm text-warning"></div>
                       </h3>
                     </div>
