--- a/static/index.html
+++ b/static/index.html
@@ -202,6 +202,11 @@
       var faceDetails=data.face_status;
       fingerId = data.id;
       console.log(faceDetails);
+      if(faceDetails==''){
+        faceDetails="No person detected";
+      }else{
+        
+      }
       $('#finger-print-status').html(message);
       $('#face-status').html(faceDetails);
       $('#finger_id').html(fingerId);
