admin and result pages apdating

--- a/static/index.html
+++ b/static/index.html
@@ -73,6 +73,7 @@
             <div class="mb-3 mt-3 p-3 bg-secondary">
               <div class="row">
                 <div class="col-md-12 ">
+               
                   <div class="card p-2">
                     <!-- <div class="input-group mb-3 mt-3">
                     <input type="number" class="form-control" id="input_Id" placeholder="Enter finger id (1-127)">
@@ -84,9 +85,9 @@
                     <h4 class="p-3">Finger Print Verification</h4>
                     <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
 
-                    <div class=" p-3 mb-2  bg-danger text-light text-center w-100 h-300">
-                      <h3 id="finger-print-status">
-                        <div class="spinner-grow spinner-grow-sm text-warning"></div>
+                    <div class=" p-3 mb-2  bg-danger text-light text-center" style="height: 200px; ">
+                      <h3 id="finger-print-status" style="margin-top: 50px; ">
+                        <div class="spinner-grow spinner-grow-lg text-warning"></div>
                       </h3>
                     </div>
                     <p id="fingerid"></p>
@@ -96,9 +97,9 @@
                   <div class="card p-2">
                     <h4 class="p-3">Face Recognition</h4>
                     <button type="button" class="btn btn-warning" id="start-face">Start</button>
-                    <div class=" p-3 bg-danger text-light text-center w-100">
-                      <h3 id="face-status">
-                        <div class="spinner-grow spinner-grow-sm text-warning"></div>
+                    <div class=" p-3 bg-danger text-light text-center" style="height: 200px; ">
+                      <h3 id="face-status"  style="margin-top: 50px; ">
+                        <div class="spinner-grow spinner-grow-lg text-warning"></div>
                       </h3>
                     </div>
 
