--- a/static/index.html
+++ b/static/index.html
@@ -299,6 +299,8 @@
         $("#vote-cdm").prop("disabled", false);
         $("#vote-act").prop("disabled", false);
 
+      }else{
+        $("#sec_1").prop("disabled", true);
       }
 
     }
