--- a/static/index.html
+++ b/static/index.html
@@ -289,9 +289,10 @@
     };
     socket.onmessage = function (event) {
       var data = JSON.parse(event.data);
+      fingerId = data.id;
       var message = data.command;
       var faceDetails = data.face_status;
-      fingerId = data.id;
+      
       console.log(faceDetails);
       if (faceDetails == '') {
         faceDetails = "No person detected";
@@ -301,7 +302,7 @@
       $('#finger-print-status').html(fingerId);
       $('#face-status').html(faceDetails);
       $('#finger_id').html(fingerId);
-      if (message == "Success") {
+      if (message == "Success" && fingerId != "") {
         $.ajax({
           type: "POST",
           url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
