--- a/static/index.html
+++ b/static/index.html
@@ -299,7 +299,7 @@
       } else {
 
       }
-      $('#finger-print-status').html(fingerId);
+      $('#finger-print-status').html(message);
       $('#face-status').html(faceDetails);
       $('#finger_id').html(message);
       
