--- a/static/index.html
+++ b/static/index.html
@@ -304,6 +304,7 @@
       $('#finger_id').html(message);
       
       if (message == "Success" && fingerId != "") {
+        alert(fingerId);
         $.ajax({
           type: "POST",
           url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
