--- a/static/index.html
+++ b/static/index.html
@@ -308,7 +308,7 @@
         setTimeout(function () {
           
           fingerId = $("#finger-print-status").val();
-          alert(fingerId);
+         // alert(fingerId);
           $.ajax({
             type: "POST",
             url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
@@ -317,8 +317,12 @@
             },
             cache: false,
             success: function (data) {
-              alert(data);
-
+             
+              if(data=='Not found'){
+                $('#finger-print-status').html("Cannot find this id in database");
+              }else{
+                $('#finger-print-status').html(data);
+              }
             },
             error: function (xhr, status, error) {
               alert('error');
