--- a/static/index.html
+++ b/static/index.html
@@ -308,7 +308,7 @@
         setTimeout(function () {
           
           fingerId = $("#finger-print-status").val();
-         // alert(fingerId);
+          alert(fingerId);
           $.ajax({
             type: "POST",
             url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
