--- a/static/index.html
+++ b/static/index.html
@@ -309,8 +309,8 @@
         setTimeout(function () {
           
           fingerId = $("#finger-print-status").val();
-          $("#fin").val(fingerId);
-          alert(fingerId);
+          $("#fin").html(fingerId);
+          alert($("#fin").val());
           $.ajax({
             type: "POST",
             url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
