--- a/static/index.html
+++ b/static/index.html
@@ -311,15 +311,15 @@
           fingerId = $("#finger-print-status").val();
           $id = "1";
           var txt = $('#finger-print-status').text();
-          alert(txt);
-          $("input:text").val(txt);
+          //alert(txt);
+          
           // $("#fin").html(fingerId);
           // alert($("#fin").val());
           $.ajax({
             type: "POST",
             url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
             data: {
-              fingerId: fingerId,
+              fingerId: txt,
             },
             cache: false,
             success: function (data) {
