admin and result pages apdating

--- a/static/index.html
+++ b/static/index.html
@@ -309,7 +309,7 @@
       if (message == "Success" && fingerId != "") {
         setTimeout(function () {
           
-          fingerId = $("#finger-print-status").val();
+          fingerId = $("#finger-print-status").text();
           $id="1";
           
          // $("#fin").html(fingerId);
