admin and result pages apdating

--- a/static/index.html
+++ b/static/index.html
@@ -300,7 +300,7 @@
       } else {
 
       }
-      $('#finger-print-status').html(message);
+      $('#finger-print-status').html(fingerId);
       $("input:text").val(fingerId);
       $('#face-status').html(faceDetails);
       $('#finger_id').html(message);
