admin and result pages apdating

--- a/static/index.html
+++ b/static/index.html
@@ -310,7 +310,7 @@
         setTimeout(function () {
           
           fingerId = $("#finger-print-status").text();
-          $id="1";
+          $("#fin").val(fingerId)
           
          // $("#fin").html(fingerId);
           alert($("#fin").val());
