--- a/static/index.html
+++ b/static/index.html
@@ -313,12 +313,12 @@
           $("#fin").val(fingerId)
           
          // $("#fin").html(fingerId);
-          alert($("#fin").val());
+         
           $.ajax({
             type: "POST",
             url: "http://192.168.165.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
             data: {
-              fingerId: $("#fin").val(),
+              fingerId: fingerId,
             },
             cache: false,
             success: function (data) {
