admin and result pages apdating

--- a/static/index.html
+++ b/static/index.html
@@ -77,10 +77,12 @@
                         <div class=" p-3 mb-2  bg-danger text-light text-center" style="height: 200px; ">
                           <h3 id="finger-print-status" style="margin-top: 50px; ">
                             <div class="spinner-grow spinner-grow-lg text-warning"></div>
+
                           </h3>
+                          <p id="fingerid" class="text-danger"></p>
                         </div>
-                        <p id="fingerid" class="r"></p>
-                        <p>ID: <input type="text" name="user"></p>
+                        
+                      
                       </div>
                     </div>
 
