admin and result pages apdating

--- a/static/register.html
+++ b/static/register.html
@@ -94,7 +94,7 @@
                   <div class="input-group mb-3 mt-3">
                     <input type="number" class="form-control" id="input_Id" placeholder="Enter finger id (1-127)">
                     <div class="input-group-append">
-                      <button id="send-btn" class="btn btn-success" type="submit">Send</button>
+                      <button id="send-btn" class="btn btn-success" type="button">Send</button>
                     </div>
                   </div> 
                 </div>
