admin and result pages apdating

--- a/static/register.html
+++ b/static/register.html
@@ -156,7 +156,7 @@
       $('#face_txt').html(fc_Id);
       var tmp=data.templates;
 
-      tmp = tmp.join(',')
+      //tmp = tmp.join(',')
        // console.log(tmp)
 
       //finger_Id = finger_Id.replace(/\s/g, '');
