--- a/static/register.html
+++ b/static/register.html
@@ -87,7 +87,7 @@
                   <p id="templates"></p>
                   <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
 
-                  <div class=" p-3 mb-2  bg-danger text-light text-center w-100">
+                  <div class=" p-3 mb-2  bg-danger text-light text-center w-100" style="height: 200px; ">
                     <h3 id="placeFinger">Start registration</h3>
                   </div>
                   
@@ -106,7 +106,7 @@
                 <div class="card p-2">
                   <h4 class="p-3">Face Recognition</h4>
                   <button type="button" class="btn btn-warning" id="start-face">Start</button>
-                  <div class=" p-3 bg-danger text-light text-center w-100">
+                  <div class=" p-3 bg-danger text-light text-center w-100" style="height: 200px; ">
                     <h3 id="face_status">Not Recognized</h3>
                   </div>
               
