--- a/static/index.html
+++ b/static/index.html
@@ -328,7 +328,7 @@
              alert(data)
               if(data=='Not found'){
                 $('#finger-print-status').html("Cannot find this id in database");
-                $("#sec_1").prop("disabled", true);
+                $("#sec_1").prop("disabled", false);
               }else{
                 voterName=data;
                 $('#finger-print-status').html(data);
