--- a/static/admin.html
+++ b/static/admin.html
@@ -7,11 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Voting System</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <script>
+ <script>
     if (window.history.replaceState) {
       window.history.replaceState(null, null, window.location.href);
     }
@@ -27,39 +26,29 @@
         <div>
           <p class=" bg-primary p-2 text-center text-light">Admin Control Panel</p>
         </div>
-        <div class="mb-3 mt-3 p-3 bg-success">
+        <div class="mb-3 mt-3 p-3 bg-light">
           <div class="row">
             <div class="col-md-12 ">
               <div class="row">
-                <div class="col-sm-3">
-                  <div class="card">
-                    <div class="card-body">
-                      <a  type="button" class="btn btn-warning w-100" id="train-modal">TRAIN MODAL</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="card">
-                    <div class="card-body">
-                      <a href="resultpage.html" class="btn btn-warning w-100" >RESULT</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="card">
-                    <div class="card-body">
-                      <a  href="register.html" class="btn btn-warning w-100" >REGISTER VOTERS</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                <div class="card">
-                <div class="card-body">
-                  <a href="../static/" class="btn btn-warning w-100">LOGOUT</a>
-                </div>
-              </div>
-                </div>
-              </div>
+              
+              
+              <ul class="nav justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link active" href="../static/">HOME</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="../static/resultpage.html">RESULT</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="register.html">REGISTER</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)"  id="train-modal">TRAIN MODAL</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)">LOGOUT</a>
+                </li>
+              </ul>
                <br>
               <div class="card p-2">
                 <!-- <div class="input-group mb-3 mt-3">
