--- a/static/index.html
+++ b/static/index.html
@@ -4,19 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Voting System</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <style>
-    .multiple_section {
-      display: none;
-    }
-  </style>
+
 </head>
 
 <body class="bg-light">
@@ -48,7 +41,17 @@
               <hr>
 
             </div>
-
+            <ul class="nav justify-content-center">
+              <li class="nav-item">
+                <a class="nav-link active" href="../static/">VOTE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../static/register.html">REGISTER</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../static/admin.html">LOGIN</a>
+              </li>
+            </ul>
 
 
 
@@ -75,7 +78,7 @@
                         <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
 
                         <div class=" p-3 mb-2  bg-danger text-light text-center" style="height: 200px; ">
-                          <h3 id="finger-print-status" style="margin-top: 50px; ">
+                          <h3 id="finger-print-status">
                             <div class="spinner-grow spinner-grow-lg text-warning"></div>
 
                           </h3>
