modifying reg and homepage

--- a/static/register.html
+++ b/static/register.html
@@ -164,6 +164,7 @@
       var res = data.command;
       var msg = data.msg;
       var fgid = data.id;
+      var fc_Id = data.faceid;
       $('#id_txt').html(fgid);
 
       var fgid = $('#id_txt').text();
