--- a/static/register.html
+++ b/static/register.html
@@ -187,14 +187,14 @@
       $('#placeFinger').html(res);
       $('#face_status').html(msg);
       $('#templates').html(tmp);
-      if ((res == "Success" && fc_Id != "") || res == "exists") {
+      if (res == "exists") {
         setTimeout(function () {
 
           $.ajax({
             type: "POST",
             url: "http://192.168.12.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
             data: {
-              fingerId: fc_Id,
+              fingerId: fgid,
             },
             cache: false,
             success: function (data) {
