--- a/static/register.html
+++ b/static/register.html
@@ -201,6 +201,8 @@
 
               if (data == 'Not found') {
                 $('#placeFinger').html("Cannot find this id in database");
+                socket.send("t");
+        socket.send(name);
               } else {
                 var voterName = data;
                 $('#placeFinger').html(data);
