--- a/static/index.html
+++ b/static/index.html
@@ -356,6 +356,7 @@
       } else {
         
     }
+    console.log('Voter Name: '+voterName)
     if(voterName != ''){
       if(faceDetails==voterName){
         $("#sec_3").prop("disabled", false);
