modifying reg and homepage

--- a/static/index.html
+++ b/static/index.html
@@ -360,7 +360,7 @@
     if(voterName != ''){
       if(faceDetails==voterName){
         $("#sec_3").prop("disabled", false);
-        $('#face-status').html('Voter Name: '+faceDetails);
+        $('#face-status').html('Voter Name: '+voterName);
       }else{
         $('#face-status').html('Name not matched');
       }
