modifying reg and homepage

--- a/static/index.html
+++ b/static/index.html
@@ -356,6 +356,7 @@
       } else {
         
        }
+       voterName=$('#finger-print-status').text();
       console.log('Voter Name: '+voterName);
   
       if(faceDetails==voterName){
