modifying reg and homepage

--- a/static/index.html
+++ b/static/index.html
@@ -308,10 +308,10 @@
       fg_id = $('#id_txt').text();
       fc_id = $('#face_txt').text();
       console.log('finger: '+fg_id)
-      console.log('face: '+document.write( fc_id.replace(/\s/g, '') ))
+      console.log('face: '+fc_id)
       console.log(faceDetails);
       console.log('Voter Name: '+voterName);
-      
+     
       if(fc_id == voterName){
         $("#sec_3").prop("disabled", false);
         $('#face-status').html('Voter Name: '+voterName);
