modifying reg and homepage

--- a/static/register.html
+++ b/static/register.html
@@ -213,7 +213,7 @@
 
               if (data == 'Not found') {
                 $('#placeFinger').html("Cannot find this id in database");
-                socket.send("d");
+                //socket.send("d");
 
               } else {
                 var voterName = data;
