modifying reg and homepage

--- a/static/register.html
+++ b/static/register.html
@@ -212,7 +212,7 @@
             success: function (data) {
 
               if (data == 'Not found') {
-                $('#placeFinger').html("Cannot find this id in database");
+                $('#placeFinger').html("Id Exists no: "+fgid);
                 //socket.send("d");
 
               } else {
