modifying reg and homepage

--- a/static/register.html
+++ b/static/register.html
@@ -190,12 +190,12 @@
         
         $('#placeFinger').html("ID:"+fgid);
       } else {
-        $('#placeFinger').html(msg);
+        $('#placeFinger').html(res);
       }
       if(fcid=="Done"){
         $('#face_status').html("Name:"+fcid);
       }else{
-        $('#face_status').html(res);
+        $('#face_status').html(msg);
       }
       $('#templates').html(tmp);
       if (res == "exists") {
