--- a/static/register.html
+++ b/static/register.html
@@ -201,7 +201,7 @@
       if (res == "exists") {
         $('#placeFinger').html("Checking id...");
         setTimeout(function () {
-
+          $('#placeFinger').html("Voter Exists ID: "+fgid);
           $.ajax({
             type: "POST",
             url: "http://192.168.12.191/face_fingerprint_voting/static/actionpages/checkfingerId.php",
@@ -212,7 +212,7 @@
             success: function (data) {
 
               if (data == 'Not found') {
-                $('#placeFinger').html("Id Exists no: "+fgid);
+               
                 //socket.send("d");
 
               } else {
