--- a/static/index.html
+++ b/static/index.html
@@ -314,7 +314,7 @@
       
       if(fc_id == voterName){
         $("#sec_3").prop("disabled", false);
-        $('#face-status').html('Voter Name: '+voterName);
+        $('#face-status').html(faceDetails);
       }else{
         $('#face-status').html('Unknown');
       }
