--- a/static/index.html
+++ b/static/index.html
@@ -299,6 +299,7 @@
     let fc_id = "";
     let fg_id = "";
     let flag=false;
+    let isBtnClicked =false;
     socket.onmessage = function (event) {
       var data = JSON.parse(event.data);
       fingerId = data.id;
@@ -320,19 +321,22 @@
       if (f != '' && i != '') {
         f = f.replace(/\s+/g, '');
         i = i.replace(/\s+/g, '');
-        if (f == i) {
-          $('#face-status').html('matched');
-          $("#sec_3").prop("disabled", false);
-          $("#sec_4").prop("disabled", false);
-          $("#sec_5").prop("disabled", false);
-          $("#vote-ccm").prop("disabled", false);
-          $("#vote-cdm").prop("disabled", false);
-          $("#vote-act").prop("disabled", false);
-          flag=true;
-        } else {
-          if(flag==false){
-            $('#face-status').html(faceDetails);
-          }
+        if(isBtnClicked){
+          if (f == i) {
+            $('#face-status').html('matched');
+            $("#sec_3").prop("disabled", false);
+            $("#sec_4").prop("disabled", false);
+            $("#sec_5").prop("disabled", false);
+            $("#vote-ccm").prop("disabled", false);
+            $("#vote-cdm").prop("disabled", false);
+            $("#vote-act").prop("disabled", false);
+            flag=true;
+          } else {
+            if(!flag){
+              $('#face-status').html(faceDetails);
+            }
+        }
+        
          
         }
       }
@@ -435,7 +439,9 @@
 
     });
     start_face.addEventListener('click', function () {
+
       socket.send("u");
+      isBtnClicked=true;
     });
 
     socket.onclose = function () {
