--- a/static/index.html
+++ b/static/index.html
@@ -323,7 +323,7 @@
         i = i.replace(/\s+/g, '');
         if(isBtnClicked){
           if (f == i) {
-            $('#face-status').html('matched');
+            $('#face-status').html('Found Name: '+faceDetails+"");
             $("#sec_3").prop("disabled", false);
             $("#sec_4").prop("disabled", false);
             $("#sec_5").prop("disabled", false);
