--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
                       </div>  -->
 
                         <h4 class="p-3">Finger Print Verification</h4>
-                        <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
+                        <button type="button" class="start-button btn btn-warning" id="start-fingerprint">Start</button>
 
                         <div class=" p-3 mb-2  bg-danger text-light text-center" style="height: 200px; ">
                           <h3 id="finger-print-status">
@@ -94,7 +94,7 @@
                     <div class="col-md-12 ">
                       <div class="card p-2">
                         <h4 class="p-3">Face Recognition</h4>
-                        <button type="button" class="btn btn-warning" id="start-face">Start</button>
+                        <button type="button" class="start-button btn btn-warning" id="start-face">Start</button>
                         <div class=" p-3 bg-danger text-light text-center" style="height: 200px; ">
                           <h3 id="face-status" style="margin-top: 50px; ">
                             <div class="spinner-grow spinner-grow-lg text-warning"></div>
