--- a/static/register.html
+++ b/static/register.html
@@ -104,7 +104,7 @@
 
                   <h4 class="p-3">Finger Print Verification</h4>
                   <p id="templates"></p>
-                  <button type="button" class="btn btn-warning" id="start-fingerprint">Start</button>
+                  <button type="button" class="start-button btn btn-warning" id="start-fingerprint">Start</button>
 
                   <div class=" p-3 mb-2  bg-danger text-light text-center w-100" style="height: 200px; ">
                     <h3 id="placeFinger">Start registration</h3>
@@ -117,7 +117,7 @@
               <div class="col-md-12 ">
                 <div class="card p-2">
                   <h4 class="p-3">Face Recognition</h4>
-                  <button type="button" class="btn btn-warning" id="start-face">Start</button>
+                  <button type="button" class="start-button btn btn-warning" id="start-face">Start</button>
                   <div class=" p-3 bg-danger text-light text-center w-100" style="height: 200px; ">
                     <h3 id="face_status">Not Recognized</h3>
                   </div>
